--- a/index.html
+++ b/index.html
@@ -10,9 +10,15 @@
 </head>
 <body>
     <div class="clock">
-        <div class="hand second"></div>
-        <div class="hand minute"></div>
-        <div class="hand hour"></div>
+        <div class="hand" id="second">
+			<div class="second"></div>
+		</div>
+		<div class="hand" id="minute">
+			<div class="minute"></div>
+		</div>
+		<div class="hand" id="hour">
+			<div class="hour"></div>
+		</div>
         
         <div class="num rotate1">
             <div class="number1">1</div>
